Create activity AddTag

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Last</string>
+    <string name="add_tag">New</string>
     <color name="white">#FFFFFF</color>
+    <string name="title_activity_add_tag">Add a new Tag</string>
+    <string name="save_tag">save tag</string>
 </resources>
