--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="title_activity_add_tag">Add a new Tag</string>
     <string name="save_tag">save tag</string>
     <string name="btnPicture">Picture</string>
+    <string name="edtTitle">Title...</string>
+    <string name="txtTitle">Title:</string>
+    <string name="radScreen">Screen</string>
+    <string name="radBook">Book</string>
+    <string name="edtCounter">Counter...</string>
+    <string name="edtScreenSeason">Season...</string>
+    <string name="edtScreenEpisode">Episode...</string>
+    <string name="edtBook">Counter...</string>
 </resources>
